update css and project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Lógica</title>
-    <link rel="stylesheet" href="./CSS/style.css">
-    <script src="js/scripts.js" defer></script>
+    <link rel="stylesheet" href="./css/PagInicial.css">
+    <script src="./js/scripts.js" defer></script>
 </head>
 <body>
     <img id="astronauta" src="./img/background.jpeg">
@@ -14,8 +14,8 @@
             <h1>Quiz Game</h1>
         </header>
         <div class="btn_home">
-            <a href="fases.html"><button type="button">Play</button></a>
-            <a href="guias.html"><button type="button">Guias</button></a>
+            <a id="linkplay" href="#"><button type="button">Play</button></a>
+            <a id="linkguias" href="#"><button type="button">Guias</button></a>
         </div>
     </div>
 </body>
