--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/scripts.js" defer></script>
 </head>
 <body>
-    <img id="astronauta" src="./img/background.jpeg">
+    <img id="astronauta" src="img/background.jpg" style="width: 100%;">
     <div id="container">
         <header>
             <h1>Quiz Game</h1>
@@ -18,5 +18,19 @@
             <a id="linkguias" href="#"><button type="button">Guias</button></a>
         </div>
     </div>
+    <!-- Trigger/Open The Modal -->
+     <button id="myBtn">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+         <span class="close">&times;</span>
+         <p>Some text in the Modal..</p>
+        </div>
+
+    </div> 
+    <script src="js/scripts.js"></script> 
 </body>
 </html>
