--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
     <script src="./js/scripts.js" defer></script>
 </head>
 <body>
-    <!-- Trigger/Open The Modal -->
-     <button id="myBtn">Open Modal</button>
-
+    <div class="basebg">
+    <img id="imginicial" src="img/inicial.jpg">
+    </div>
+    <img id="astrounauta" src="img/astronauta.png">
+        <div class="button-container">
+            <a href="fases.html" class="linkplay">PLAY</a>
+            <a href="#" id="openModalLink" class="linkguias">GUIA</a>
+        </div>
     <!-- The Modal -->
     <div id="myModal" class="modal">
-
         <!-- Modal content -->
         <div class="modal-content">
-         <span class="close">&times;</span>
-         <p>Some text in the Modal..</p>
+            <span class="close">&times;</span>
+            <p>Some text in the Modal..</p>
+            <ul> 
+                <li> O jogador terá 10 segundos para responder cada questão.</li>
+            </ul>
         </div>
-    </div> 
+    </div>   
 </body>
 </html>
