update titulo and fonts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="basebg">
         <img id="imginicial" src="img/inicial.jpg">
     </div>
+    <h1> QUIZ LOGICA PROPOSICIONAL</h1>
     <img id="astrounauta" src="img/astronauta.png">
     <div class="button-container">
         <button class="linkplay" id="playButton">PLAY</button>
