update new style fases

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             <a href="#" class="linkFase3" data-fase="fase3">Fase 3</a>
             <a href="#" class="linkFase4" data-fase="fase4">Fase 4</a>
         </div>
-        
+        <div class="planetasstyle">
+        <img id="pluto" src="img/pluto.png">
+        <img id="mercurio" src="img/mercurio.png">
+        <img id="marte" src="img/marte.png">
+        <img id="netuno" src="img/netuno.png">
+        </div>
+
         <div class="fase" id="fase1">
             
         </div>
