--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
     <!-- Lista de fases -->
     <div class="fases" id="fasesContainer">
         <div class="button-fases">
-            <button id="linkfase1" class="linkFase1" data-fase="fase1">Fase 1</button>
-            <button id="linkfase2" class="linkFase2" data-fase="fase2">Fase 2</button>
-            <button id="linkfase3" class="linkFase3" data-fase="fase3">Fase 3</button>
-            <button id="linkfase4" class="linkFase4" data-fase="fase4">Fase 4</button>
+            <button id="linkfase1" class="linkFase1" data-fase="fase1"></button>
+            <button id="linkfase2" class="linkFase2" data-fase="fase2">
+                <span class="cadeado">&#x1F512;</span>
+            Fase 2</button>
+            <button id="linkfase3" class="linkFase3" data-fase="fase3">
+                <span class="cadeado">&#x1F512;</span>
+            Fase 3</button>
+            <button id="linkfase4" class="linkFase4" data-fase="fase4">
+                <span class="cadeado">&#x1F512;</span>
+            Fase 4</button>
         </div>
         <div class="planetasstyle">
         <img id="pluto" src="img/pluto.png">
