adcicionando logica do quiz

--- a/index.html
+++ b/index.html
@@ -40,16 +40,30 @@
 
         <div class="fase modal" id="fase-1">
             <div class="modal-content">
-                <span id="perguntas"></span>
-                <span id="respostas"></span>
-                <span class="close">&times;</span>
+                <div class="quiz-conteiner">
+                    <span id="perguntas"></span>
+                    <span id="respostas"></span>
+                    <span id="qtd"></span>
+                    <span class="close">&times;</span>
+                </div>
+                <div class="quiz-control">
+                    <span class="span"></span>
+                    <button class="button">Reiniciar</button>
+                </div>
             </div>
         </div>
         <div class="fase modal" id="fase-2">
             <div class="modal-content">
-                <span id="perguntas"></span>
-                <span id="respostas"></span>
-                <span class="close">&times;</span>
+                <div class="quiz-conteiner">
+                    <span id="perguntas"></span>
+                    <span id="respostas"></span>
+                    <span id="qtd"></span>
+                    <span class="close">&times;</span>
+                </div>
+                <div class="quiz-control">
+                    <span></span>
+                    <button>Reiniciar</button>
+                </div>
             </div>
         </div>
         <div class="fase modal" id="fase-3">
