atualizando modais e logica

--- a/index.html
+++ b/index.html
@@ -40,57 +40,61 @@
 
         <div class="fase modal" id="fase-1">
             <div class="modal-content">
+                <span class="close">&times;</span>
                 <div class="quiz-conteiner">
                     <span id="perguntas"></span>
                     <span id="respostas"></span>
-                    <span id="qtd"></span>
-                    <span class="close">&times;</span>
+                    <span id="qtd"></span> 
                 </div>
                 <div class="quiz-control">
                     <span class="span"></span>
                     <button class="button">Reiniciar</button>
+                    <img src="./img/OIP.jpeg" alt="Astronauta pronto par partida!" class="astronauta" id="img1">
                 </div>
             </div>
         </div>
         <div class="fase modal" id="fase-2">
             <div class="modal-content">
+                <span class="close">&times;</span>
                 <div class="quiz-conteiner conteiner2">
                     <span id="perguntas2"></span>
                     <span id="respostas2"></span>
                     <span id="qtd2"></span>
-                    <span class="close">&times;</span>
                 </div>
                 <div class="quiz-control control2">
                     <span id="span"></span>
                     <button id="button">Reiniciar</button>
+                    <img src="./img/OIP.jpeg" alt="Astronauta pronto par partida!" class="astronauta" id="img2">
                 </div>
             </div>
         </div>
         <div class="fase modal" id="fase-3">
             <div class="modal-content">
+                <span class="close">&times;</span>
                 <div class="quiz-conteiner conteiner3">
                     <span id="perguntas3"></span>
                     <span id="respostas3"></span>
                     <span id="qtd3"></span>
-                    <span class="close">&times;</span>
                 </div>
                 <div class="quiz-control control3">
                     <span id="span"></span>
                     <button id="button">Reiniciar</button>
+                    <img src="./img/OIP.jpeg" alt="Astronauta pronto par partida!" class="astronauta" id="img3">
                 </div>
             </div>
         </div>
         <div class="fase modal" id="fase-4">
             <div class="modal-content">
+                <span class="close">&times;</span>
                 <div class="quiz-conteiner conteiner4">
                     <span id="perguntas4"></span>
                     <span id="respostas4"></span>
                     <span id="qtd4"></span>
-                    <span class="close">&times;</span>
                 </div>
                 <div class="quiz-control control4">
                     <span id="span"></span>
                     <button id="button">Reiniciar</button>
+                    <img src="./img/OIP.jpeg" alt="Astronauta pronto par partida!" class="astronauta" id="img4">
                 </div>
             </div>
         </div>
