--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                <p> 6. Mantenha-se atento(a) e focado(a). Esta é uma missão interativa que exige sua total concentração</p>
                <p> 7. Ao final da série de questões, sua pontuação será calculada e você receberá um feedback sobre seu desempenho</p>
                 
-                Prepare-se para explorar os confins da lógica e boa sorte em sua jornada intergaláctica pela Lógica Proposicional! <img src="img/cont.png" width="35px">
+                Prepare-se para explorar os confins da lógica e boa sorte em sua jornada intergaláctica pela Lógica Proposicional
             </p>
 
         </div\>
