--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="fase modal" id="fase-1">
             <div class="modal-content">
-                <span class="close">&times;</span>
+                <span class="close">&times;</span>x
                 <div class="quiz-conteiner">
                     <span id="perguntas"></span>
                     <span id="respostas"></span>
